@@ -1,5 +1,10 @@
 2002-11-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03391] use editor when input at last line
+	* linein.c (_editor): added
+
+2002-11-09  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03390] some fixes related with form
 	* form.c (input_textarea): goto input_end
 			unlink(tmpf);
@@ -4435,4 +4440,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.488 2002/11/08 16:07:03 ukai Exp $
+$Id: ChangeLog,v 1.489 2002/11/08 16:09:58 ukai Exp $
